src/tests/encore/basic/recvNullCall.err
Error: empty receiver in x.test(...) in "recvNullCall.enc" (line 8, column 7)
