src/tests/encore/basic/recvNullCall.enc
class Main
  def test() : void
    print("If you can read this, then recvNullCall failed")
  def main() : void
    let
      x = null:Main
    in 
      x.test() 

